# vcpkg_vscode_self_note

./: CMakeLists.txt  main.cxx  proxy_cmd.bat  readme.md
cmakebuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compile_commands.json  fibo.vcxproj  fibo.vcxproj.filters  fibonacci.sln
cmakebuild/.cmake/api/v1/reply/: cache-v2-c376260fddcd59c26e0e.json  cmakeFiles-v1-97188ba9c223a7dd57af.json  codemodel-v2-0d8a27699467e636a369.json  index-2023-10-05T13-07-08-0733.json  target-ALL_BUILD-RelWithDebInfo-80975f3e83f814445875.json  target-ZERO_CHECK-RelWithDebInfo-50bc53117d926801e380.json  target-fibo-Debug-3128f58b5b752ac69bce.json  target-fibo-MinSizeRel-c7ff75fb1f8d02f93eab.json  target-fibo-RelWithDebInfo-9ac2be5f471b3a53e119.json  target-fibo-Release-17049f94ff909594805d.json  (+1 more)
cmakebuild/fibo.dir/Debug/: fibo.exe.recipe  fibo.ilk
cmakebuild/fibo.dir/Debug/fibo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  fibo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmakebuild/fibo.dir/Release/: fibo.exe.recipe
cmakebuild/fibo.dir/Release/fibo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  fibo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmakebuild/win32/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmakebuild/win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
(+4 files in other folders)
